drawer overlap has fixed

--- a/frontend/src/components/brat/brat_css/style-vis.css
+++ b/frontend/src/components/brat/brat_css/style-vis.css
@@ -11,10 +11,10 @@ text {
 }
 */
 
-#svg {
+/* #svg {
   margin: 34px auto 100px;
   padding-top: 15px;
-}
+} */
 
 .center_wrapper {
   display: table;
